tests/negative/typecheck/anon-fn.orng
fn main() -> Int
    let x: Int = fn ()->() {}
    0